testdata/de/dm/intellij/liferay/language/jsp/LiferayTaglibDeprecationInspectionTest/aui-tool.jsp
<%@ taglib uri="http://liferay.com/tld/aui" prefix="aui" %>

<warning descr="Deprecated the aui:tool Tag with no direct Replacement. (see LPS-70422)"><aui:<error descr="Cannot resolve symbol 'aui:tool'">tool</error> /></warning>
